--- a/CarloudyiOSSDK/Info.plist
+++ b/CarloudyiOSSDK/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>plz enable location</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>plz enable location</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -39,6 +35,15 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>plz enable location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>plz enable location</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>11</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
